Froze angular-cli and compiler-cli versions
Was causing compile issues without freezing

--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "zone.js": "0.6.23"
   },
   "devDependencies": {
-    "angular-cli": "^1.0.0-beta.20-4",
-    "@angular/compiler-cli": "^2.1.0",
+    "angular-cli": "1.0.0-beta.20-4",
+    "@angular/compiler-cli": "2.1.0",
     "@types/jasmine": "^2.2.30",
     "@types/node": "^6.0.42",
     "codelyzer": "~1.0.0-beta.3",
