--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,3 @@
-// Place your settings in this file to overwrite default and user settings.
+{
+    "vsicons.presets.angular": true
+} // Place your settings in this file to overwrite default and user settings.
