--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "zone.js": "0.6.23"
   },
   "devDependencies": {
-    "angular-cli": "1.0.0-beta.20-4",
+    "angular-cli": "1.0.0",
     "@angular/compiler-cli": "2.1.0",
     "@types/jasmine": "^2.2.30",
     "@types/node": "^6.0.42",
