--- a/package.json
+++ b/package.json
@@ -12,25 +12,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "2.1.0",
-    "@angular/compiler": "2.1.0",
-    "@angular/core": "2.1.0",
-    "@angular/forms": "2.1.0",
-    "@angular/http": "2.1.0",
-    "@angular/platform-browser": "2.1.0",
-    "@angular/platform-browser-dynamic": "2.1.0",
-    "@angular/router": "3.1.0",
+    "@angular/common": "2.4.0",
+    "@angular/compiler": "2.4.0",
+    "@angular/core": "2.4.0",
+    "@angular/forms": "2.4.0",
+    "@angular/http": "2.4.0",
+    "@angular/platform-browser": "2.4.0",
+    "@angular/platform-browser-dynamic": "2.4.0",
+    "@angular/router": "3.4.0",
     "core-js": "^2.4.1",
     "oidc-client": "^1.2.1",
     "reflect-metadata": "0.1.3",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "5.0.1",
     "ts-helpers": "^1.1.1",
-    "zone.js": "0.6.23"
+    "zone.js": "0.7.4"
   },
   "devDependencies": {
-    "angular-cli": "1.0.0",
-    "@angular/compiler-cli": "2.1.0",
-    "@types/jasmine": "^2.2.30",
+    "@angular/cli": "1.0.0",
+    "@angular/compiler-cli": "2.4.0",
+    "@types/jasmine": "2.5.36",
     "@types/node": "^6.0.42",
     "codelyzer": "~1.0.0-beta.3",
     "jasmine-core": "2.4.1",
